apps/changedetection/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: changedetection
spec:
  selector:
    app: changedetection
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
