apps/changedetection/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: changedetection-ingress
  namespace: changedetection
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: changedetection.apps.rke2.koperwas.eu.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: changedetection
                port:
                  number: 80
